tests/baselines/reference/parserIndexMemberDeclaration3.errors.txt
parserIndexMemberDeclaration3.ts(3,11): error TS2564: Property 'v' has no initializer and is not definitely assigned in the constructor.


==== parserIndexMemberDeclaration3.ts (1 errors) ====
    class C {
       [a: string]: number;
       public v: number
              ~
!!! error TS2564: Property 'v' has no initializer and is not definitely assigned in the constructor.
    }